--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
     const closeLetter = document.getElementById('closeLetter');
 
     const background = new Image();
-    background.src = 'assets/hotel.png';
+    background.src = 'hotel.png';
 
     const playerImg = new Image();
-    playerImg.src = 'assets/us.png';
+    playerImg.src = 'us.png';
 
     const player = {
       x: canvas.width / 2,
